Use generated API for auth