@@ -1,16 +1,14 @@
 package com.esi.auth.config;
 
-import java.util.Arrays;
-import java.util.List;
-
 import com.esi.auth.user.model.User;
+import java.util.List;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-public class MyUserDetails extends User implements UserDetails  {
+public class MyUserDetails extends User implements UserDetails {
 
-    private User user;
+    private final User user;
 
     public MyUserDetails(final User user) {
         this.user = user;
@@ -19,7 +17,7 @@ public class MyUserDetails extends User implements UserDetails  {
     @Override
     public List<? extends GrantedAuthority> getAuthorities() {
         SimpleGrantedAuthority authority = new SimpleGrantedAuthority(user.getRole());
-        return Arrays.asList(authority);
+        return List.of(authority);
     }
 
     @Override
